--- a/api/templates/controlPanel.html
+++ b/api/templates/controlPanel.html
@@ -5,10 +5,11 @@
     <title>
         Kontrollpanel
     </title>
-    <link rel="stylesheet" href="/static/controlpanelstyle.css/" />
+    <link rel="stylesheet" href="/static/controlpanel_style.css/" />
     {{ boxedSections.sectionHead() }}
     <link rel="manifest" href="manifest" />
     <link rel="icon" type="image/x-icon" href="/static/images/favicon192.png">
+    <script src="/static/common.js/"></script>
 </head>
     <body>
         <div id="container">
