--- a/api/templates/register.html
+++ b/api/templates/register.html
@@ -3,11 +3,12 @@
     <head>
         <title>Register</title>
         <link rel="manifest" href="manifest" />
-        <link rel="stylesheet" href="/static/registerstyle.css/" />
+        <link rel="stylesheet" href="/static/register_style.css/" />
         {% if session and session.username == "KingLele" %}
         <link rel="stylesheet" href="https://leanderkafemann.github.io/bueroWebsite/styling/forms.css" />
         {% endif %}
         <link rel="icon" type="image/x-icon" href="/static/images/favicon192.png">
+        <script src="/static/common.js/"></script>
     </head>
     <body>
         <div class="signup-box">
