--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -3,11 +3,12 @@
     <head>
         <title>Home</title>
         <link rel="manifest" href="manifest" />
-        <link rel="stylesheet" href="/static/homestyle.css/" />
+        <link rel="stylesheet" href="/static/home_style.css/" />
         {% if session and session.username == "KingLele" %}
         <link rel="stylesheet" href="https://leanderkafemann.github.io/bueroWebsite/styling/forms.css" /> <!--different login text box styling-->
         {% endif %}
         <link rel="icon" type="image/x-icon" href="/static/images/favicon192.png">
+        <script src="/static/common.js/"></script>
     </head>
     <body>
         <div id="container">
